# backend/internal/adapter/dto/request/user_setting_request.go
@@ -1,0 +1,5 @@
+package request
+
+type UpdateUserSettingRequest struct {
+	EditorType string `json:"editorType" validate:"required,oneof=markdown wysiwyg"`
+}
